--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="logo">
         <div class="together">
-          <a href="index.html"><img src="logo.png" alt="logo" class="img-fluid"></a>
+          <a href="index.html"><img src="assets/img/logo.png" alt="logo" class="img-fluid"></a>
           <h1><a href="index.html"><span>HomeworkHub</span></a></h1>
         </div>
       </div>
