--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
           <img
             src="https://images.unsplash.com/photo-1584697964156-deca98e4439d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
-            class="img-fluid animated" alt="">
+            class="img-fluid animated rounded" alt="">
         </div>
       </div>
     </div>
@@ -139,9 +139,7 @@
           </div> -->
           <div class="together">
             <div data-aos="fade-right">
-              <img
-                src="https://images.unsplash.com/photo-1584697964156-deca98e4439d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"
-                id="h_image">
+              <img src="assets/img/other/boy_and_computer.jpg" width='400' class="rounded mx-4">
             </div>
 
             <!-- <h3>Who Are We?</h3> -->
