--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="350" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="407" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Sessions Tutored</p>
                 </div>
@@ -176,7 +176,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="316" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -185,7 +185,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="630" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1465" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
@@ -287,7 +287,7 @@
               <h3>Grades</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/167/167707.png">
               <h5>We are tutoring</h5>
-              <h1>Grades 1 - 7</h1>
+              <h1>Grades 1 - 8</h1>
 
             </div>
           </div>
@@ -317,7 +317,7 @@
               <h3>Subject Limit</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/2702/2702069.png">
               <h5>You can sign up for</h5>
-              <h1>3 subjects</h1>
+              <h1>3 subjects at a time</h1>
 
             </div>
           </div>
@@ -826,30 +826,32 @@
                           </div>
                         </div>
 
+
                         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-                          <div class="member" data-aos="zoom-in" data-aos-delay="400">
-                            <div class="pic"><img src="assets/img/team/leah.jpg" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                              <h4>Leah Cai</h4>
-                              <span>Students and Volunteer Director</span>
-                              <!--   <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-                            </div>
-                          </div>
-                        </div>
-
-                      </div>
-                      <div class="row" data-aos="fade-left">
-
-                        <div class="col-lg-3 col-md-6">
                           <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                            <div class="pic"><img src="assets/img/team/tina.png" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="assets/img/team/tina.png" class="img-fluid" width='272' alt="">
+                            </div>
                             <div class="member-info">
                               <h4>Tina Faez</h4>
                               <span>Volunteers and Tutors Director</span>
                               <!--  <div class="social">
+                              <a href=""><i class="bi bi-instagram"></i></a>
+                              <a href=""><i class="bi bi-linkedin"></i></a>
+                            </div> -->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row" data-aos="fade-left">
+
+                        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+                          <div class="member" data-aos="zoom-in" data-aos-delay="400">
+                            <div class="pic"><img src="assets/img/team/leah.jpg" width='360' class="img-fluid" alt="">
+                            </div>
+                            <div class="member-info">
+                              <h4>Leah Cai</h4>
+                              <span>Students Director</span>
+                              <!--   <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div> -->
