--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ul>
               <li><a href="#donors">Community Partners</a></li>
               <li><a href="#donors">Donors</a></li>
-              <li><a href="#news">HomeworkHub on the News</a></li>
+              <li><a href="#news">News Articles</a></li>
             </ul>
           </li>
           <!-- <li><div id="google_translate_element"></div></li -->
@@ -697,7 +697,7 @@
                     <div class="container">
                       <div class="section-title" data-aos="fade-up">
                         <h2>Testimonials</h2>
-                        <p>Here's what our clients have to say:</p>
+                        <p>Here's what our parents have to say:</p>
                       </div>
 
                       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -904,6 +904,21 @@
                       </div>
                       <div class="row" data-aos="fade-left">
 
+
+                        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+                          <div class="member" data-aos="zoom-in" data-aos-delay="200">
+                            <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                              <h4>Fiona MacDougall</h4>
+                              <span>Quality Control Manager</span>
+                              <!-- <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+                            </div>
+                          </div>
+                        </div>
+
                         <div class="col-lg-3 col-md-6">
                           <div class="member" data-aos="zoom-in" data-aos-delay="100">
                             <div class="pic"><img src="assets/img/team/adrian.jpg" class="img-fluid" alt=""></div>
@@ -918,26 +933,12 @@
                           </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-                          <div class="member" data-aos="zoom-in" data-aos-delay="200">
-                            <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                              <h4>Fiona MacDougall</h4>
-                              <span>Creative Design Manager</span>
-                              <!-- <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-                            </div>
-                          </div>
-                        </div>
-
                         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                           <div class="member" data-aos="zoom-in" data-aos-delay="300">
                             <div class="pic"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                               <h4>MyChau Tight</h4>
-                              <span>Pairing Manager</span>
+                              <span>Special Events Coordinator</span>
                               <!--          <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
