--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+  <header id="header" class="fixed-top d-flex align-items-center header-transparent py-5">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
