--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="#hero">Home</a></li>
-          <li><a href="#pricing">Students</a></li>
+          <!-- <li><a href="#function">Students</a></li> -->
+          <li class="dropdown"><a href="#function"><span>Students</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+              </li>
+            </ul>
           <li><a href="#volunteers">Volunteers</a></li>
           <li><a href="#intro">Events</a></li>
           <li><a href="#donations">Donate</a></li>
@@ -142,17 +148,15 @@
               <img src="assets/img/other/boy_and_computer.jpg" width='400' class="rounded mx-4">
             </div>
 
-            <!-- <h3>Who Are We?</h3> -->
-            <div
-              class="col-xl-7 col-lg-6 icon-boxes d-flex  rflex-column align-items-stretch justify-content-center py-5 px-lg-5"
-              data-aos="fade-left">
-              <p>Hi, we're the HomeworkHub, a youth orchestrated free after school tutoring club! HomeworkHub provides
-                Elementary school students with FREE tutoring sessions and volunteer tutors with community service
-                hours, all from the comfort and safety of your own homes!<br>We understand how hard it is for younger
-                students to adapt and keep up with the virtual and distance learning methods. We also know how limited
-                and difficult volunteer opportunities are to find for those who want to help the community. We are
-                dedicated to helping people who are currently facing those problems through our services! Together, we
-                can work towards improving the community and getting through these tough times!</p>
+
+            <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column py-5 px-lg-5" data-aos="fade-left">
+              <h3>About Us</h3>
+              <p>HomeworkHub is a youth-led, non-profit organization dedicated to providing free, accessible, and
+                quality educational resources to all students in need in order to guide them to academic success.
+                Over the past months, the HomeworkHub community has grown to over <strong>500</strong> members across
+                the world including
+                tutors and students from Canada, the US, Kenya, India, Philippines, and Indonesia!
+              </p>
 
             </div>
           </div>
@@ -272,7 +276,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <section id="function" class="pricing">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -673,18 +677,11 @@
                         class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
                         data-aos="fade-left">
                         <h3>HomeworkHub's Mission...</h3>
-                        <p>With the world currently in a pandemic and thousands of schools closed or modified, many
-                          students are forced to learn online or through a hybrid curriculum. Many children have had
-                          difficulties adjusting or keeping up with this new method of learning. There just isn't enough
-                          assistance to go around to help all students thrive in this virtual environment. We at
-                          HomeworkHub recognize the demand for extra assistance are committed to delivering free
-                          personalized online tutoring sessions to students in need of assistance.<br>With the Pandemic
-                          also comes the closing of many volunteer and community organizations as well. As a group of
-                          high school students, we also found it very difficult to help our community during these
-                          difficult times and earn volunteer hours as well. That's why we began HomeworkHub. Apart from
-                          providing free and accessible help for young students during these unprecedented times,
-                          HomeworkHub is dedicated to providing an outlet for students passionate about our community to
-                          help others, earn valuable experiences, and fill their volunteer hours.</p>
+                        <p>Through our FREE tutoring program, we provide Elementary school students with the one-on-one
+                          academic support they lack and volunteer tutors with necessary community service hours all
+                          from the comfort and safety of your own homes! HomeworkHub is dedicated to providing academic
+                          assistance to students and their families in need.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -1168,7 +1165,8 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bootslander-free-bootstrap-landing-page-template/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and Developed by <a
-          href="mailto:mariyatur27@gmail.com">Mariya Turetska</a>
+          href="mailto:mariyatur27@gmail.com">Mariya Turetska</a> and <a
+          href="https://www.linkedin.com/in/andytubeee">Andrew Yang</a>
       </div>
     </div>
   </footer><!-- End Footer -->
