--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
                   <i class="ri-store-line" style="color: #ffbb2c;"></i>
                   <div class="seperate">
                     <h3><a href="">We're Completely Free</a></h3>
-                    <p>We understand that during such stressful times, Financing your child's education shouldn't be
-                      something you need to worry about.</p>
+                    <p class="mt-2">We believe that everyone should have access to quality educational resources.
+                      Financing your
+                      student's educational journey shouldn't be something you need to worry about!
+                    </p>
                   </div>
                 </div>
               </div>
@@ -228,7 +230,9 @@
                   <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
                   <div class="seperate">
                     <h3><a href="">One on One Attention</a></h3>
-                    <p>During our sessions, your child will receive personalized, one on one attention from their tutor!
+                    <p class="mt-2">During our sessions, your student will receive personalized, one on one attention
+                      from their
+                      tutor!
                     </p>
                   </div>
                 </div>
@@ -241,9 +245,10 @@
                   <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
                   <div class="seperate">
                     <h3><a href="">Qualified Tutors</a></h3>
-                    <p>Our highschool tutors have all been where your child is today! Not only that, but we have an
-                      application, interview and training process for all our volunteer tutors to ensure only the best
-                      for your student.</p>
+                    <p>Our high school and university tutors have all been where your child is today! Not only that, but
+                      also we have an application, interview and training process for all our volunteer tutors to ensure
+                      only the best for your student.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -254,7 +259,8 @@
                   <div class="seperate">
                     <h3><a href="">100% Safe and Virtual Services</a></h3>
                     <p>All of our sessions will be held online over google meet to ensure our tutors and student's
-                      safeties during this Pandemic. That way your child can stay safe while learning!</p>
+                      safeties during this pandemic. That way, your student can stay safe while learning!
+                    </p>
                   </div>
                 </div>
               </div>
@@ -264,8 +270,10 @@
                 <i class="ri-database-2-line" style="color: #47aeff;"></i>
                 <div class="seperate">
                   <h3><a href="">We Cater to ESL Students</a></h3>
-                  <p>If English isn't your child's first language, just select the ESL option when registering. We'll
-                    select a tutor from our many talented multilingual volunteers just for them!</p>
+                  <p class="mt-2">If English isn't your child's first language, just select the ESL option when
+                    registering. We'll
+                    select a tutor from our many talented multilingual volunteers just for them!
+                  </p>
                 </div>
               </div>
             </div>
@@ -281,7 +289,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <!--  <h2>Our Sessions</h2> -->
-          <p>Here's How We Function...</p>
+          <p>Here's How We Work...</p>
         </div>
 
         <div class="row" data-aos="fade-left">
@@ -316,12 +324,12 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-3 col-md-6 mt-4 pb-5 mt-lg-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="400">
               <h3>Subject Limit</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/2702/2702069.png">
               <h5>You can sign up for</h5>
-              <h1>3 subjects at a time</h1>
+              <h1 style="font-size: 1.5rem; margin-bottom: 10px !important;">3 subjects at a time</h1>
 
             </div>
           </div>
@@ -412,11 +420,11 @@
         <div class="swiper-slide">
           <div class="testimonial-item">
             <h1 id="intro">Intro Programs</h1>
-            <p id="intro">Looking to try something new? Whether you're bored in Lockdown or just looking to pick up a
-              new hobbie, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
+            <p id="intro">Looking to try something new? Whether you're bored at home or just looking to pick up a new
+              hobby, HomeworkHub's exclusive FREE introductory courses offer a wide range of subjects from Piano to
               Computer Science! During these introduction courses, you'll be given the opportunity to discover your
               chosen subject in more detail with our experienced guest speakers and even try it out for yourself!
-              Courses are 1:30 to 2:00 hours long with a maximum of 30-50 students.</p>
+            </p>
             <h3 id="hl">New Intro Programs Are Coming Soon!</h3>
           </div>
         </div>
@@ -440,27 +448,30 @@
               data-aos="fade-left">
               <h1>Become a HomeworkHub Tutor</h1>
               <h4 class="vol">Why You Should Join</h4>
-              <p>Are you looking to work with younger children and help our community while gaining volunteer hours?
-                Under current circumstances, it's difficult to find ways to get Volunteer Hours as all the usual
-                institutions are either closed or fully booked. By joining HomeworkHub, not only are you assisting
-                someone that might be struggling with school, earning volunteer hours, AND building up your university
-                resume, but you are also given the opportunity to develop patience, leadership and communication skills
-                all while staying safe! </p>
+              <p>Not only will you have the opportunity to work with younger students in need and earn volunteer hours
+                and great experience, you are also given the opportunity to develop excellent leadership and
+                communication skills all while staying safe!
+              </p>
               <h4 class="vol">Task Description</h4>
-              <p>After the application process, you will be paired with an elementary student and have 45 minute online
-                tutoring sessions with them over a span of 8 weeks.</p>
+              <p>After the application process, you will be paired with an elementary school student and tutor a 45
+                minute class every week during an 8 week session.
+              </p>
               <h4 class="vol">During These Session You Will Be:</h4>
               <ul>
-                <li>Tutoring your students on your assigned subjects</li>
-                <li>Assisting them with any questions or assignments they may have</li>
+                <li>Planning your lessons in advance
+                </li>
+                <li>Arriving to lessons on time and ready to teach.
+                </li>
+                <li>Assisting your student in their chosen subject.
+                </li>
                 <li>Logging your time!</li>
               </ul>
               <h4 class="vol">Requirements</h4>
               <ul>
                 <li>At least 14 years old or be in high school</li>
-                <li>Commitmentment and dedication to the task</li>
-                <li>Must be comfortable working with kids and pre-teens</li>
-                <li>Good grades and communication skills are necessary!</li>
+                <li>Committed and dedicated to the task </li>
+                <li>Comfortable with working with kids and pre-teens </li>
+                <li>Maintaining good academic grades and communication skills! </li>
               </ul>
               <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform"><button
