--- a/index.html
+++ b/index.html
@@ -57,18 +57,15 @@
             </ul>
           <li><a href="#volunteers">Volunteers</a></li>
           <li><a href="#intro">Events</a></li>
+          <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#team">Our Team</a></li>
+              <li><a href="#donors">Our Partners</a></li>
+              <li><a href="#news">Our Features</a></li>
+            </ul>
+          <li><a href="#real-testimonials">Testimonials</a></li>
           <li><a href="#donations">Donate</a></li>
-          <li class="dropdown"><a href="#team"><span>Our Team</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#contact">Contact Us</a></li>
-            </ul>
-          <li class="dropdown"><a href="#"><span>Our Partners</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#donors">Community Partners</a></li>
-              <li><a href="#donors">Donors</a></li>
-              <li><a href="#news">News Articles</a></li>
-            </ul>
-          </li>
+
           <!-- <li><div id="google_translate_element"></div></li -->
           <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -701,7 +698,7 @@
                   <!-- End of Our Mission Section -->
 
                   <!-- ======= Testimonials Section ======= -->
-                  <section id="testimonials" class="testimonials">
+                  <section id="real-testimonials" class="testimonials">
                     <div class="container">
                       <div class="section-title" data-aos="fade-up">
                         <h2>Testimonials</h2>
@@ -1103,9 +1100,9 @@
 
         </div>
 
-      </div>
-    </section> -->
-                        <!-- End Contact Section -->
+      </div>-->
+                  </section>
+                  <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
