--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li class="dropdown"><a href="#function"><span>Students</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
             </ul>
           <li><a href="#volunteers">Volunteers</a></li>
