--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <!-- <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div> -->
-          <div class="together">
+          <div class="d-flex align-items-center">
             <div data-aos="fade-right">
               <img src="assets/img/other/boy_and_computer.jpg" width='400' class="rounded mx-4">
             </div>
@@ -155,27 +155,16 @@
                 tutors and students from Canada, the US, Kenya, India, Philippines, and Indonesia!
               </p>
 
+              <h3 class='mt-5'>HomeworkHub's Mission...</h3>
+              <p>Through our FREE tutoring program, we provide Elementary school students with the one-on-one
+                academic support they lack and volunteer tutors with necessary community service hours all
+                from the comfort and safety of your own homes! HomeworkHub is dedicated to providing academic
+                assistance to students and their families in need.
+              </p>
+
             </div>
           </div>
         </div>
-
-        <!-- Our Mission Section -->
-        <section id="about" class="about">
-          <div class="container-fluid mb-3">
-
-            <div class="row">
-              <div class="d-flex align-items-center">
-                <div class="col-xl-7 col-lg-6 icon-boxes ms-5" data-aos="fade-left">
-                  <h3>HomeworkHub's Mission...</h3>
-                  <p>Through our FREE tutoring program, we provide Elementary school students with the one-on-one
-                    academic support they lack and volunteer tutors with necessary community service hours all
-                    from the comfort and safety of your own homes! HomeworkHub is dedicated to providing academic
-                    assistance to students and their families in need.
-                  </p>
-                </div>
-              </div>
-            </div>
-        </section>
 
         <!-- ======= Counts Section ======= -->
         <section id="counts" class="counts">
