--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <h3>About Us</h3>
               <p>HomeworkHub is a youth-led, non-profit organization dedicated to providing free, accessible, and
                 quality educational resources to all students in need in order to guide them to academic success.
-                Over the past months, the HomeworkHub community has grown to over <strong>500</strong> members across
+                Over the past months, the HomeworkHub community has grown to over <strong>700</strong> members across
                 the world including
                 tutors and students from Canada, the US, Kenya, India, Philippines, and Indonesia!
               </p>
@@ -175,7 +175,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="407" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="447" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Sessions Tutored</p>
                 </div>
@@ -184,7 +184,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="316" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="324" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -193,7 +193,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="1465" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1609" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
@@ -410,9 +410,13 @@
             </div>
           </div>
 
-          <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"><button
-              class="reg" id="streg">Register Today</button></a>
+          <div class="d-flex justify-content-center">
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">
+              <button class="reg">Register Today</button>
+            </a>
+          </div>
+
 
         </div>
     </section> <!-- End Subject Section -->
