--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 quality educational resources to all students in need in order to guide them to academic success.
                 Over the past months, the HomeworkHub community has grown to over <strong>700</strong> members across
                 the world including
-                tutors and students from Canada, the US, Kenya, India, Philippines, and Indonesia!
+                tutors and students from Canada, the US, China, Kenya, India, Philippines, and Indonesia!
               </p>
 
               <h3 class='mt-5'>HomeworkHub's Mission...</h3>
@@ -303,7 +303,7 @@
               <h3>Grades</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/167/167707.png">
               <h5>We are tutoring</h5>
-              <h1>Grades 1 - 8</h1>
+              <p>Grades 1 - 8</p>
 
             </div>
           </div>
@@ -313,7 +313,7 @@
               <h3>Duration</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/2972/2972531.png">
               <h5>Each session is</h5>
-              <h1>45 minutes</h1>
+              <p>45 minutes</p>
 
             </div>
           </div>
@@ -323,7 +323,7 @@
               <h3>Sessions</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/972/972260.png">
               <h5>A subject is tutored for</h5>
-              <h1>8 sessions</h1>
+              <p>8 sessions</p>
 
             </div>
           </div>
@@ -333,7 +333,7 @@
               <h3>Subject Limit</h3>
               <img class="icons" src="https://image.flaticon.com/icons/png/128/2702/2702069.png">
               <h5>You can sign up for</h5>
-              <h1 style="font-size: 1.5rem; margin-bottom: 10px !important;">3 subjects at a time</h1>
+              <p>3 subjects at a time</p>
 
             </div>
           </div>
@@ -773,7 +773,7 @@
 
                   <div class="section-title" data-aos="fade-up">
                     <h2>Team</h2>
-                    <p>Our Great Team</p>
+                    <p>Our Team</p>
                   </div>
 
                   <div class="row" data-aos="fade-left">
