--- a/index.html
+++ b/index.html
@@ -455,7 +455,6 @@
               class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
               data-aos="fade-left">
               <h1>Become a HomeworkHub Tutor</h1>
-              <h4 class="vol">Why You Should Join</h4>
               <p>Not only will you have the opportunity to work with younger students in need and earn volunteer hours
                 and great experience, you are also given the opportunity to develop excellent leadership and
                 communication skills all while staying safe!
@@ -1107,7 +1106,8 @@
               <p>
                 Ontario, Canada
                 <strong>Phone:</strong> +1 917 660 3871<br>
-                <strong>Email:</strong> tutoring.homeworkhub@gmail.com<br>
+                <strong>Email:</strong> <a
+                  href="mailto:tutoring.homeworkhub@gmail.com">tutoring.homeworkhub@gmail.com</a><br>
               </p>
             </div>
           </div>
@@ -1118,6 +1118,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Courses</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Contact</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="">Privacy policy</a></li> -->
             </ul>
