--- a/index.html
+++ b/index.html
@@ -249,9 +249,8 @@
                   <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
                   <div class="seperate">
                     <h3><a href="">Qualified Tutors</a></h3>
-                    <p>Our high school and university tutors have all been where your child is today! Not only that, but
-                      also we have an application, interview and training process for all our volunteer tutors to ensure
-                      only the best for your student.
+                    <p>Our high school and university tutors have all been where your child is today! Our application,
+                      interview and training process ensures only the best for your child.
                     </p>
                   </div>
                 </div>
