--- a/index.html
+++ b/index.html
@@ -538,6 +538,13 @@
                       class="partner_img">
                   </div>
                 </div><!-- End testimonial item -->
+                <div class="swiper-slide">
+                  <div class="testimonial-item">
+                    <h3>Mill-Courtland & Highland Stirling Community Groups</h3>
+                    <h4>Community Partner</h4>
+                    <img src="assets/img/other/mill-courtland.png" class="partner_img">
+                  </div>
+                </div><!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-item">
