--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <!-- <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div> -->
-          <div class="d-flex align-items-center">
+          <div class="d-flex align-items-center flex-wrap">
             <div data-aos="fade-right">
               <img src="assets/img/other/boy_and_computer.jpg" width='400' class="rounded mx-4">
             </div>
