--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
+        <div class="col-lg-4 order-1 order-lg-2 hero-img mt-3" data-aos="zoom-out" data-aos-delay="300">
           <img
             src="https://images.unsplash.com/photo-1584697964156-deca98e4439d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
             class="img-fluid animated rounded" alt="">
@@ -970,7 +970,7 @@
 
               <!-- ======= F.A.Q Section ======= -->
               <section id="faq" class="faq section-bg">
-                <div class="container">
+                <div class="container px-4">
 
                   <div class="section-title" data-aos="fade-up">
                     <h2>F.A.Q</h2>
@@ -1047,7 +1047,7 @@
 
               <!-- ======= Contact Section ======= -->
               <section id="contact" class="contact">
-                <div class="container">
+                <div class="container px-4">
 
                   <div class="section-title" data-aos="fade-up">
                     <h2>Contact</h2>
