--- a/index.html
+++ b/index.html
@@ -488,7 +488,11 @@
 
         <!-- ======= Sponsors Section ======= -->
         <section id="testimonials" class="testimonials">
-          <div class="container" id="donors">
+          <div class="container ps-5" id="donors">
+            <div class="section-title" data-aos="fade-up">
+              <h2 id="volunteers">Our Donors</h2>
+              <p>Thank you!</p>
+            </div>
 
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
