--- a/index.html
+++ b/index.html
@@ -619,6 +619,8 @@
                   </ul>
                   <a href="https://www.paypal.com/donate?business=DRPWCU5CZ3J5J&amp;currency_code=CAD"><button
                       class="donate">Donate Now</button></a>
+                  <p><strong>Alternative: </strong>Email transfer your amount to <i>tutoring.homeworkhub@gmail.com</i>
+                  </p>
                 </div>
               </div>
               <!-- End of Donate Section -->
