--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,9 @@
                         <div class="email">
                           <a href="mailto:tutoring.homeworkhub@gmail.com"><i class="bi bi-envelope"></i></a>
                           <h4>Email:</h4>
-                          <p>tutoring.homeworkhub@gmail.com</p>
+                          <a href="mailto:tutoring.homeworkhub@gmail.com">
+                            <p>tutoring.homeworkhub@gmail.com</p>
+                          </a>
                         </div>
 
                         <div class="phone">
