--- a/index.html
+++ b/index.html
@@ -1171,8 +1171,8 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Social Networks:</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Instagram</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Facebook</a></li>
+              <li><i class="bx bxl-instagram"></i> <a href="#">Instagram</a></li>
+              <li><i class="bx bxl-facebook"></i> <a href="#">Facebook</a></li>
             </ul>
 
           </div>
