--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Social Networks:</h4>
             <ul>
-              <li><i class="bx bxl-instagram"></i> <a href="#">Instagram</a></li>
+              <li><i class="bx bxl-instagram"></i> <a href="https://www.instagram.com/hh.tutoring/">Instagram</a></li>
               <li><i class="bx bxl-facebook"></i> <a href="#">Facebook</a></li>
             </ul>
 
