--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6">
-            <div class="footer-info">
+            <div class="footer-info rounded-pill">
               <h3>HomeworkHub</h3>
               <p class="pb-3"><em>Let's learn and teach together!</em></p>
               <p>
