--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         <section id="testimonials" class="testimonials">
           <div class="container ps-5" id="donors">
             <div class="section-title" data-aos="fade-up">
-              <h2 id="volunteers">Our Donors</h2>
+              <h2 id="volunteers">Our Donors and Community Partners</h2>
               <p>Thank you!</p>
             </div>
 
