--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                         </div>
                         <div class="member-info">
                           <h4>Leah Cai</h4>
-                          <span>Students Director</span>
+                          <span>Quality Assistance Director</span>
                           <!--   <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -907,25 +907,7 @@
                       </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-                      <div class="member" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="pic"><img src="assets/img/team/angela.jpeg" class="img-fluid" alt=""></div>
-                        <div class="member-info">
-                          <h4>Angela Zielke-Stray</h4>
-                          <span>Marketing Manager</span>
-                          <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                  <div class="row" data-aos="fade-left">
-
-
-                    <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+                    <div class="col-lg-3 col-md-6 mt-3">
                       <div class="member" data-aos="zoom-in" data-aos-delay="200">
                         <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
                         <div class="member-info">
@@ -939,7 +921,22 @@
                       </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+                      <div class="member" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="pic"><img src="assets/img/team/angela.jpeg" class="img-fluid" alt="">
+                        </div>
+                        <div class="member-info">
+                          <h4>Angela Zielke-Stray</h4>
+                          <span>Marketing Manager</span>
+                          <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 mt-3">
                       <div class="member" data-aos="zoom-in" data-aos-delay="100">
                         <div class="pic"><img src="assets/img/team/adrian.jpg" class="img-fluid" alt=""></div>
                         <div class="member-info">
@@ -953,7 +950,7 @@
                       </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+                    <div class="col-lg-3 col-md-6 mt-3">
                       <div class="member" data-aos="zoom-in" data-aos-delay="300">
                         <div class="pic"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt=""></div>
                         <div class="member-info">
@@ -967,6 +964,14 @@
                       </div>
                     </div>
                   </div>
+
+                </div>
+                <div class="row" data-aos="fade-left">
+
+
+
+
+
 
                 </div>
               </section><!-- End Team Section -->
